<resources>
    <string name="app_name">MyApp</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">button_send</string>
    <string name="dialog_fire_missiles">Fire missiles ?</string>
    <string name="fire">Fire</string>
    <string name="cancel">Cancel</string>
    <string name="tip">is Exit ?</string>
    <string name="btn_cancel">CANCEL</string>
    <string name="btn_ok">OK</string>
    <string name="new_game">New_game</string>
    <string name="help">Help</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="go">Go</string>
    <string name="app_welcome_name">登机桥及桥载设备运行调度手机APP V3.0</string>


    <!--登录界面-->
    <string name="title_login">用户登录</string>
    <string name="title_select">选择类型</string>
    <string name="title_addr">服务器地址</string>
    <string name="title_emple">员工号</string>
    <string name="btnLogin">登录</string>
    <string name="btnLoginCanel">取消登录</string>
    <!--登录输入框提示-->
    <string name="hint_add">请输入服务器地址</string>
    <string name="hint_emp">请输入员工号</string>
    <string name="hint_spinner">请选择类型</string>

    <!--默认四个员工号补齐-->
    <string-array name="emp_array">
        <item>B105</item>
        <item>B106</item>
        <item>B107</item>
    </string-array>


    <!--主界面项-->
    <string name="name_flt">登机桥</string>
    <string name="state">状态</string>
    <string name="time">时间</string>

    <!--注册界面-->
    <string name="register">注册</string>
    <string name="phone">手机号</string>
    <string name="verify1">验证码</string>
    <string name="verify2">获取验证码</string>
    <string name="password">密码</string>
    <string name="duplicate">重复</string>

    <!--web 测试界面-->
    <string name="url">http://</string>
    <string name="gosite">Go</string>

    <!--签名板-->
    <string name="signed">签名板</string>
    <string name="sig_cancel">取消</string>
    <string name="sig_clear">清除</string>
    <string name="sig_ok">确定</string>
</resources>
