<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DisplayMsgActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="366dp"
        android:layout_height="0dp"
        android:layout_marginBottom="129dp"
        android:layout_marginTop="16dp"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_SendRel"
        android:layout_width="190dp"
        android:layout_height="81dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:onClick="sendResult"
        android:text="@string/button_send"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/button4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="49dp"
        android:onClick="startThrd"
        android:text="@string/start"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toEndOf="@+id/button5"
        app:layout_constraintStart_toStartOf="@+id/btn_SendRel"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/button5"
        android:layout_width="191dp"
        android:layout_height="0dp"
        android:layout_marginBottom="70dp"
        android:layout_marginStart="24dp"
        android:onClick="stopThrd"
        android:text="@string/stop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

</android.support.constraint.ConstraintLayout>